k8s/apps/arr-stack/cleanuparr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cleanuparr
  namespace: arr-stack
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &domain cleanuparr.${CLUSTER_DOMAIN}
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - *domain
      secretName: cleanuparr-tls
  rules:
    - host: *domain
      http:
        paths:
          - backend:
              service:
                name: cleanuparr
                port:
                  number: 11011
            path: /
            pathType: Prefix
